Fix extra space by putting on 1 single line the entire "agree to terms and conditions" checkbox label + reintroducing margin-left in css.

--- a/scss/forms/_form-check.scss
+++ b/scss/forms/_form-check.scss
@@ -135,8 +135,8 @@
   // Boosted mod: required symbol
   &:required {
     ~ .form-check-label::after {
+      margin-left: $form-label-required-margin-left;
       color: $accessible-orange;
-      // Boosted mod: no margin-left
       content: "*";
     }
   }
